--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,41 @@
-@import "tailwindcss"
+body {
+  overflow: hidden;
+}
+#dev-tools {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  padding: 0;
+  margin: 0;
+  background-color: rgba(45, 45, 45, .5);
+}
+#dev-tools[data-show-status="hidden"] > .notice-board-div {
+  display: none;
+}
+.notice-board {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.notice-board[data-show-status="hidden"] {
+  display: none;
+}
+.notice-board-div {
+  display: flex;
+  flex-direction: column;
+}
+#notice-board > li {
+  padding: .25rem;
+  transition: background-color 0.5s ease-in-out;
+  background-color: rgba(45, 45, 45, .5);
+  font-size: 1rem;
+}
+.notice-board > li[data-status="good"] {
+  background-color: rgba(0, 125, 0, .5)
+}
+.notice-board > li[data-status="bad"] {
+  background-color: rgba(125, 0, 0, .5)
+}
